<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jaimin.fooddonation.FoodPosting"
    android:background="@android:color/holo_green_light">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroupDR">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donor_radio_lable"
            android:id="@+id/radioDonor"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="16sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipient_radio_lable"
            android:id="@+id/radioRecipient"
            android:layout_below="@+id/radioDonor"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="16sp" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DRname"
        android:layout_below="@+id/radioGroupDR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/name_hint"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/DRaddress"
        android:layout_below="@+id/DRname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/address_hint"
        android:textSize="16sp"
        android:textIsSelectable="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/DRzipcode"
        android:layout_below="@+id/DRaddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/zipcode_hint"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/DRphone"
        android:layout_below="@+id/DRzipcode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/phone_hint"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/DRpeople"
        android:layout_below="@+id/DRphone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/numpeople_hint"
        android:textSize="16sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/peoplenum"
        android:layout_alignTop="@+id/DRpeople"
        android:layout_toRightOf="@+id/DRpeople"
        android:layout_toEndOf="@+id/DRpeople"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_submit_text"
        android:id="@+id/post_button"
        android:layout_below="@+id/peoplenum"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/datetext"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp" />


</RelativeLayout>
